--- a/Juego1/TowerDefense/TowerDefense.vcxproj
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj
@@ -23,18 +23,15 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Background.cpp" />
-    <ClCompile Include="CrushableTile.cpp" />
-    <ClCompile Include="DestroyableTile.cpp" />
-    <ClCompile Include="Door.cpp" />
-    <ClCompile Include="DoorTeleports.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLayer.cpp" />
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuLayer.cpp" />
-    <ClCompile Include="Pad.cpp" />
+    <ClCompile Include="Path.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Point.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -45,17 +42,14 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Background.h" />
-    <ClInclude Include="CrushableTile.h" />
-    <ClInclude Include="DestroyableTile.h" />
-    <ClInclude Include="Door.h" />
-    <ClInclude Include="DoorTeleports.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLayer.h" />
     <ClInclude Include="Layer.h" />
     <ClInclude Include="MenuLayer.h" />
-    <ClInclude Include="Pad.h" />
+    <ClInclude Include="Path.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="Text.h" />
