--- a/Juego1/TowerDefense/TowerDefense.vcxproj.filters
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="EnemyGenerator.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Tower.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -132,6 +135,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="EnemyGenerator.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Tower.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
