Comenzando con el desarrollo de la tienda y la UI

--- a/Juego1/TowerDefense/TowerDefense.vcxproj
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="CollisionEngine.cpp" />
+    <ClCompile Include="ConstructionManager.cpp" />
     <ClCompile Include="ConstructionTile.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyGenerator.cpp" />
@@ -35,14 +36,22 @@
     <ClCompile Include="MenuLayer.cpp" />
     <ClCompile Include="Path.cpp" />
     <ClCompile Include="PathManager.cpp" />
+    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="ShopManager.cpp" />
     <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Tower.cpp" />
     <ClCompile Include="Turret.cpp" />
+    <ClCompile Include="TurretA.cpp" />
+    <ClCompile Include="TurretAFactory.cpp" />
+    <ClCompile Include="TurretB.cpp" />
+    <ClCompile Include="TurretBFactory.cpp" />
+    <ClCompile Include="TurretFactory.cpp" />
+    <ClCompile Include="TurretItem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
@@ -50,6 +59,7 @@
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Background.h" />
     <ClInclude Include="CollisionEngine.h" />
+    <ClInclude Include="ConstructionManager.h" />
     <ClInclude Include="ConstructionTile.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="EnemyGenerator.h" />
@@ -60,14 +70,22 @@
     <ClInclude Include="MenuLayer.h" />
     <ClInclude Include="Path.h" />
     <ClInclude Include="PathManager.h" />
+    <ClInclude Include="Pawn.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="ShopManager.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Tower.h" />
     <ClInclude Include="Turret.h" />
+    <ClInclude Include="TurretA.h" />
+    <ClInclude Include="TurretAFactory.h" />
+    <ClInclude Include="TurretB.h" />
+    <ClInclude Include="TurretBFactory.h" />
+    <ClInclude Include="TurretFactory.h" />
+    <ClInclude Include="TurretItem.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
