Añadiendo colores rgb

--- a/Juego1/TowerDefense/TowerDefense.vcxproj
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="RGB.cpp" />
     <ClCompile Include="ShopManager.cpp" />
     <ClCompile Include="Space.cpp" />
     <ClCompile Include="Text.cpp" />
@@ -78,6 +79,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="RGB.h" />
     <ClInclude Include="ShopManager.h" />
     <ClInclude Include="Space.h" />
     <ClInclude Include="Text.h" />
