--- a/Juego1/TowerDefense/TowerDefense.vcxproj
+++ b/Juego1/TowerDefense/TowerDefense.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Background.cpp" />
+    <ClCompile Include="BlueGem.cpp" />
     <ClCompile Include="CollisionEngine.cpp" />
     <ClCompile Include="ConstructionManager.cpp" />
     <ClCompile Include="ConstructionTile.cpp" />
@@ -38,7 +39,9 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLayer.cpp" />
     <ClCompile Include="Horde.cpp" />
+    <ClCompile Include="GemGenerator.cpp" />
     <ClCompile Include="Layer.cpp" />
+    <ClCompile Include="MagentaGem.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="MenuLayer.cpp" />
@@ -48,7 +51,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Projectile.cpp" />
-    <ClCompile Include="Resources.cpp" />
+    <ClCompile Include="Gem.cpp" />
     <ClCompile Include="RGB.cpp" />
     <ClCompile Include="ShopManager.cpp" />
     <ClCompile Include="Space.cpp" />
@@ -64,12 +67,14 @@
     <ClCompile Include="UITurretItem.cpp" />
     <ClCompile Include="UIPurchasedTurret.cpp" />
     <ClCompile Include="UITextIcon.cpp" />
+    <ClCompile Include="YellowGem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Background.h" />
+    <ClInclude Include="BlueGem.h" />
     <ClInclude Include="CollisionEngine.h" />
     <ClInclude Include="ConstructionManager.h" />
     <ClInclude Include="ConstructionTile.h" />
@@ -85,7 +90,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLayer.h" />
     <ClInclude Include="Horde.h" />
+    <ClInclude Include="GemGenerator.h" />
     <ClInclude Include="Layer.h" />
+    <ClInclude Include="MagentaGem.h" />
     <ClInclude Include="MapManager.h" />
     <ClInclude Include="MenuLayer.h" />
     <ClInclude Include="Path.h" />
@@ -94,7 +101,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Projectile.h" />
-    <ClInclude Include="Resources.h" />
+    <ClInclude Include="Gem.h" />
     <ClInclude Include="RGB.h" />
     <ClInclude Include="ShopManager.h" />
     <ClInclude Include="Space.h" />
@@ -110,6 +117,7 @@
     <ClInclude Include="UITurretItem.h" />
     <ClInclude Include="UIPurchasedTurret.h" />
     <ClInclude Include="UITextIcon.h" />
+    <ClInclude Include="YellowGem.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
